cassandra/network/cnp-ingress-cassandra-server-access-least-privilege.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-ingress-cassandra-server-access-least-privilege"
  namespace: default        #change default namespace to match your namespace
spec:
    description: Allow only permitted requests to Cassandra server.  Enforce Least Privilege
    endpointSelector:
      matchLabels:
        app: cass-server    #change app: cass-server to your labels
    ingress:
    - fromEndpoints:
      - matchLabels:
          app: testpod-limited   #change  app: testpodp-limited to your labels
      toPorts:
      - ports:
        - port: "9042"
          protocol: TCP
        rules:
          l7proto: cassandra
          l7:
          - query_action: "select"
            query_table: "system*"
          - query_action: "select"
            query_table: "system_schema*"
          - query_action: "insert"
            query_table: "attendance.daily_records"
    - fromEndpoints:
      - matchLabels:
          app: testpod-full      #change testpod-full to your labels
      toPorts:
      - ports:
        - port: "9042"
          protocol: TCP
        rules:
          l7proto: cassandra
          l7:
          - {}
